--- a/www/reward.html
+++ b/www/reward.html
@@ -220,16 +220,16 @@
 		</div>
 
 		<audio id="benar1" preload="auto">
-			<source src="../../../../suara/terapi/indo/Bagus.mp3">
-			<source src="../../../../suara/terapi/indo/Bagus.wav">
+			<source src="suara/terapi/indo/Bagus.mp3">
+			<source src="suara/terapi/indo/Bagus.wav">
 		</audio>
 		<audio id="benar2" preload="auto">
-			<source src="../../../../suara/terapi/indo/Bagus.mp3">
-			<source src="../../../../suara/terapi/indo/Bagus.wav">
+			<source src="suara/terapi/indo/Bagus.mp3">
+			<source src="suara/terapi/indo/Bagus.wav">
 		</audio>
 		<audio id="salah1" preload="auto">
-			<source src="../../../../suara/terapi/indo/Tidak.mp3">
-			<source src="../../../../suara/terapi/indo/Tidak.wav">
+			<source src="suara/terapi/indo/Tidak.mp3">
+			<source src="suara/terapi/indo/Tidak.wav">
 		</audio>
 <!--
 		<script type="text/javascript">
