--- a/www/db.html
+++ b/www/db.html
@@ -6,12 +6,15 @@
 		<link href="css/level.css" rel="stylesheet" type="text/css" />
 		<script src="js/jquery.min.js"></script>
 		<script src="js/flowtype.js"></script>
+		<script src="js/isiterapi.js"></script>
+		<script src="js/querycakra.js"></script>
 		<script type="text/javascript">
+			
+
 			function addAkun() {
- 				var divTable = document.getElementById("akun");
- 	
- 				var myTable = document.createElement("table");
- 				myTable.setAttribute("id", "tg");
+ 				var myTable = document.getElementById("tg");
+ 	//			var table = document.createElement("table");
+ 	//			table.setAttribute("id", "tg");
 
 				var count = 1;
 
@@ -34,7 +37,6 @@
 				    }
 				    row.appendChild(cell);
 				    myTable.appendChild(row);
-				    divTable.appendChild(myTable);
 				}
 	//			myTable.appendChild(table);
  			}
@@ -42,35 +44,34 @@
  			function load() {
 			    console.log("Page load finished");
 			}
+
+		
 		</script>
 	</head>
 
-	<body bgcolor="#000000">
+	<body bgcolor="#000000" onload="displayAkun()">
 		
-		<div id="akun">
+		<div>
 			<table id="tg">
-			  <tbody>
 			  <tr>
-			  	<td width="15%" rowspan="5"><img width="100%" src="img/Pengaturan/rekaman.png" /></td>
+			  	<td width="15%" rowspan="5" id="gambar"></td>
 			  </tr>
 			  <tr>
-			    <td >{Nama}</td>
+			    <td id="nama"></td>
 			  </tr>
 			  <tr>
-			    <td>{TTL}</td>
+			    <td id="ttl"></td>
 			  </tr>
 			  <tr>
-			    <td>{Usia}</td>
+			    <td id="usia"></td>
 			  </tr>
 			  <tr>
-			    <td>{JK}</td>
+			    <td id="jeniskelamin"></td>
 			  </tr>
-			  </tbody>
 			  <!--NEXT PROFILE -->
 			 
-			</table>
+			</table><input type="button" id="add" value="Add" onclick="Javascript:addAkun()">
 		</div>
-		<input type="button" id="add" value="Add" onclick="Javascript:addAkun()">
 		<script type="text/javascript">
 			$('body').flowtype();
 		</script>
